--- a/app/views/house_reviews/new.html.erb
+++ b/app/views/house_reviews/new.html.erb
@@ -1,1 +1,11 @@
-<h1>New House Review</h1>
+<h1>House Review <%= @house_review.house_id.address %></h1>
+
+<%= form_for @house_review do |f| %>
+  <%= f.label :title %><br>
+  <%= f.text_field :title %><br>
+    <br>
+  <%= f.label "Your Review" %><br>
+  <%= f.text_area :content %>
+    <br>
+  <%= f.submit %>
+<% end %>
