--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,1 +1,17 @@
 <h1>House Show</h1>
+
+<img src= <%=@house.picture%> alt="house picture" width="375" height="250"><br>
+<br>
+<h3>Address</h3>
+<%= @house.address %><br>
+<br>
+<h3>Bedrooms:</h3>
+<%= @house.bedrooms %><br>
+<br>
+<h3>Bathrooms:</h3>
+<%= @house.bathrooms %><br>
+<br>
+<h3>Description:</h3>
+<%= @house.description %><br>
+<br>
+<h3> <%= link_to 'Back', houses_path %></h3>
