--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,1 +1,6 @@
-<h1>new</h1>
+<%= form_for @offer do |f| %>
+        <%= f.label "Offer Amount:" %>
+        <%= f.number_field :amount%>
+        
+        <%= f.submit %>
+<% end %>
