added tour,review, offer functionality, created new house forms 12:22PM

--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -16,6 +16,14 @@
 <br>
 <h3>Description:</h3>
 <%= @house.description %><br>
+
+
+<br>
+<%= render 'tours/new' %><br>
+<br>
+<%= render 'tours/show' %><br>
+<br>
+<%= render 'offers/new' %><br>
 <br>
 <%= render 'offers/show' %><br>
 <br>
