--- a/app/views/house_reviews/_show.html.erb
+++ b/app/views/house_reviews/_show.html.erb
@@ -1,5 +1,6 @@
+<h3>Reviews!</h3><br>
 <% @house_reviews.each do |review| %>
-    <h3>Reviews!</h3><br>
-    <%= review.title %>:<br>
-    <%= review.content%>
+    <h4><%= review.title %>:<br></h4>
+    <%= review.content%><br>
+    <br>
 <% end %>
