--- a/app/views/houses/edit.html.erb
+++ b/app/views/houses/edit.html.erb
@@ -1,1 +1,25 @@
-<h1>Edit House</h1>
+<h4>Update Listing!</h4>
+<%= form_for (@house) do |f| %>
+    <%= f.label :address %>
+    <%= f.text_field :address%><br>
+    <br>
+    <%= f.label :price %>
+    <%= f.number_field :price%><br>
+    <br>
+    <%= f.label :agent_id %>
+    <%= f.collection_select :agent_id, Agent.all, :id, :full_name%><br>
+    <br>
+    <%= f.label :bedrooms %>
+    <%= f.number_field :bedrooms%><br>
+    <br>
+    <%= f.label :bathrooms %>
+    <%= f.number_field :bathrooms, :step => "0.25"%><br>
+    <br>
+    <%= f.label :description %>
+    <%= f.text_area :description%><br>
+    <br>
+    <%= f.label "Image URL" %>
+    <%= f.text_area :picture%><br>
+    <br>
+    <%= f.submit %>
+<% end %>
