--- a/app/views/house_reviews/_new.html.erb
+++ b/app/views/house_reviews/_new.html.erb
@@ -1,10 +1,14 @@
-<%= form_for ([@house, @house_review]) do |f| %>
-  <%= f.label :title %><br>
-  <%= f.text_field :title %><br>
-    <br>
-  <%= f.label "Your Review" %><br>
-  <%= f.text_area :content %>
+<% if @current_user.id == @house.seller.id%>
+Can't make offer on your listing.
+<% else%>
+  <%= form_for ([@house, @house_review]) do |f| %>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %><br>
+      <br>
+    <%= f.label "Your Review" %><br>
+    <%= f.text_area :content %>
 
-     <br>
-  <%= f.submit %>
+      <br>
+    <%= f.submit %>
+  <% end %>
 <% end %>
