--- a/app/views/tours/_new.html.erb
+++ b/app/views/tours/_new.html.erb
@@ -1,13 +1,17 @@
-<h4>Book a Tour:</h4>
-<%= form_for ([@house, @tour]) do |f| %>
-        <%= f.label :date %>
-        <%= f.date_field :date%>
-
-        <%= f.label :time %>
-        <%= f.time_field :time%>
-
-        <%= f.label :agent_id %>
-        <%= f.collection_select :agent_id, Agent.all, :id, :full_name %>
+<% if @current_user.id == @house.seller.id%>
         
-        <%= f.submit %>
+<% else %>
+        <h4>Book a Tour:</h4>
+                 <%= form_for ([@house, @tour]) do |f| %>
+                <%= f.label :date %>
+                <%= f.date_field :date%>
+
+                <%= f.label :time %>
+                <%= f.time_field :time%>
+
+                <%= f.label :agent_id %>
+                <%= f.collection_select :agent_id, Agent.all, :id, :full_name %>
+
+                <%= f.submit %>
+        <% end %>
 <% end %>
