fixed depended destroy

--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,1 +1,22 @@
-<h1>show!</h1>
+<h1><%= @agent.full_name %></h1>
+<img src= <%=@agent.picture%> alt="agent picture" width="375" height="250"><br>
+<br>
+<h3>Years of Experience:</h3>
+<%= @agent.years_experience %><br>
+<br>
+<h3>About Me!</h3>
+<%= @agent.bio %><br>
+<br>
+<h3>Scheduled Tours:</h3>
+<% @agent.tours.each do |tour| %>
+    <img src= <%= tour.house.picture %> alt="house picture" width="200" height="150"><br>
+    <%= tour.house.address %> || (<%= tour.date %>) <%= tour.time %><br>
+<% end %>
+<br>
+<h3>House Listings:</h3>
+<% @agent.houses.each do |house| %>
+    <img src= <%= house.picture %> alt="house picture" width="200" height="150"><br>
+    <%= house.address %>
+<% end %>
+<br>
+
