--- a/app/views/house_reviews/_show.html.erb
+++ b/app/views/house_reviews/_show.html.erb
@@ -1,6 +1,7 @@
 <h3>Reviews!</h3><br>
 <% @house_reviews.each do |review| %>
     <h4><%= review.title %>:<br></h4>
+    <h4>Toured House: <%= review.toured %><br></h4>
     <%= review.content%><br>
     <br>
 <% end %>
