--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Hello, <%= @user.name %></h1>
 
-<%= link_to "Edit Profile", edit_user_path %>||<%= link_to "Delete Account", user_path(@user), method: :delete, data: { confirm: "Are you sure?" } %><br>
+<%= link_to "Edit Profile", edit_user_path %>
             
 
 <img src=<%= @user.img_url%> alt="profile picture" width="250" height="250"><br>
