time format and yes no review radio button needs fixed other than that mvp is done

--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -15,7 +15,12 @@
 <br>
 <h3>House Listings:</h3>
 <% @agent.houses.each do |house| %>
+
+<% if house.picture.blank?%>
+    <%= image_tag("no_image_found_house.png") %>
+<% else%>
     <img src= <%= house.picture %> alt="house picture" width="200" height="150"><br>
+<% end %><br>
     <%= house.address %>
 <% end %>
 <br>
