--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -1,6 +1,6 @@
 <h4>Sell your house!</h4>
-<% if flash[:my_errors] %>
-    <% flash[:my_errors].each do |error| %>
+<% if flash[:house_errors] %>
+    <% flash[:house_errors].each do |error| %>
         <div style="color: red"><%= error %></div>
         <% end %>
 <% end %>
@@ -13,7 +13,7 @@
     <%= f.number_field :price%><br>
     <br>
     <%= f.label :agent_id %>
-    <%= f.collection_select :agent_id, Agent.all, :id, :full_name%><br>
+    <%= f.collection_select :agent_id, Agent.all, :id, :full_name, prompt: true%><br>
     <br>
     <%= f.label :bedrooms %>
     <%= f.number_field :bedrooms%><br>
