--- a/app/views/tours/_new.html.erb
+++ b/app/views/tours/_new.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:tour_errors] %>
+    <% flash[:tour_errors].each do |error| %>
+        <div style="color: red"><%= error %></div>
+        <% end %>
+<% end%>
 <% if @current_user.id == @house.seller.id%>
         
 <% else %>
@@ -10,7 +15,7 @@
                 <%= f.time_field :time%>
 
                 <%= f.label :agent_id %>
-                <%= f.collection_select :agent_id, Agent.all, :id, :full_name %>
+                <%= f.collection_select :agent_id, Agent.all, :id, :full_name, prompt: true %>
 
                 <%= f.submit %>
         <% end %>
