--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <body>
-<% if flash[:my_errors] %>
-    <% flash[:my_errors].each do |error| %>
+<% if flash[:user_errors] %>
+    <% flash[:user_errors].each do |error| %>
         <div style="color: red"><%= error %></div>
         <% end %>
 <% end %>
