this branch is bad

--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -29,6 +29,8 @@ $<%= @house.price %><br>
 <h3>Description:</h3>
 <%= @house.description %><br>
 
+ <%= image_tag @google(center: house.address%>
+
 
 <br>
 <%= render 'tours/new' %><br>
