--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,3 +1,4 @@
+<div  class="container">
 <h1>House Index</h1>
 
 <% @houses.each do |house|%>
@@ -11,3 +12,5 @@
    <%= house.address%><br>
    Beds: <%= house.bedrooms %> |  Baths: <%= house.bathrooms %><br>
 <% end%>
+
+</div>
