--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,54 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Zillno</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Zillno" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Real Estate" %>">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
-    <div class="row backgroundimg">
-      <div class="container">
-
-    </div>
-
-
-  <header class="container">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-          <%= link_to "Zillno", houses_path, class:"navbar-brand" %>
-        </div>
-    <ul class="nav navbar-nav navbar-right">
-      <% if session[:user_id] %>
-      <% @user = User.find(session[:user_id]) %>
-      <li> <%= link_to "Profile", user_path(@user) %></li>
-      <% end %>
-      <li> <%= link_to "Houses", houses_path  %></li>
-      <li> <%= link_to "Sell Your House!", new_house_path  %></li>
-      <li> <%= link_to "Agents", agents_path %></li>
-      <li> <% if @current_user %>
-       <%= form_tag "/logout", method: :delete do %>
-       <%= submit_tag "Logout" %>
-       <% end %>
-      <!-- If not logged in, show login -->
-      <% else %>
-        <%= link_to "Login", new_login_path %>
-      <% end %> </li>
-    </ul>
-
-    </div>
-    </nav>
+    <header>
+      <%= render 'layouts/navigation' %>
     </header>
-   
-    <%= yield %>
-    </div>
-    </div>
-  </div>
+    <main role="main">
+    <%= content_for?(:content) ? yield(:content) : yield %>
+    </main>
 
   </body>
 </html>
+
