--- a/app/views/offers/_show.html.erb
+++ b/app/views/offers/_show.html.erb
@@ -1,6 +1,6 @@
   <h3>Recent Offers!</h3>
 <% @offers.each do |offer| %>
-    Offer: $<%= offer.amount %> | Agent: <%= offer.agent.full_name %>
+    Offer: $<%= number_with_delimiter(offer.amount, :delimiter => ',') %> | Agent: <%= offer.agent.full_name %>  <%= number_with_delimiter(@number, :delimiter => ',') %>
     <br>
 <% end %>
 
