--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,13 +1,53 @@
-<h1>House Index</h1>
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag("House_Header_1.png", class: "d-block w-100", size: "1500x1000")%>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("House_Header_2.png", class: "d-block w-100", size: "1500x1000")%>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("House_Header_3.png", class: "d-block w-100", size: "1500x1000")%>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-<% @houses.each do |house|%>
+<hr>
+<div class="container">
+    <% @houses.each do |house|%>
 
-<% if house.picture.blank?%>
-    <%= link_to image_tag("no_image_found_house.png"), house_path(house)%><br>
-<% else%>
-    <%= link_to image_tag(house.picture, size: "375x250"), house_path(house) %><br>
-<% end %>
-   <%= house.address%><br>
-   Beds: <%= house.bedrooms %> |  Baths: <%= house.bathrooms %><br>
-   Price: $<%= number_with_delimiter(house.price, :delimiter => ',') %><br>
-<% end%>
+    <% if house.picture.blank?%>
+        <%= link_to image_tag("no_image_found_house.png"), house_path(house)%><br>
+    <% else%>
+        <%= link_to image_tag(house.picture, size: "375x250"), house_path(house) %><br>
+    <% end %>
+        <%= house.address%><br>
+        Beds: <%= house.bedrooms %> |  Baths: <%= house.bathrooms %><br>
+        Price: $<%= number_with_delimiter(house.price, :delimiter => ',') %><br>
+    <% end%>
+</div>
