added home page and misc designs

--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -6,26 +6,24 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag("House_Header_1.png", class: "d-block w-100", size: "1500x1000")%>
+      <%= image_tag("House_logo.png", class: "d-block w-100")%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("House2.png", class: "d-block w-100")%>
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <h5>SEE REVIEWS FROM OTHERS WHO TOURED HOUSES YOU ARE INTERESTED IN!</h5>
+        <p>Users who tour houses are able to leave reviews on the house so it can help you figure out if the house is right for you! </p>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag("House_Header_2.png", class: "d-block w-100", size: "1500x1000")%>
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <%= image_tag("House_Header_3.png", class: "d-block w-100", size: "1500x1000")%>
+      <%= image_tag("House3.png", class: "d-block w-100")%>
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
     </div>
+
+
   </div>
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
