--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+
   <head>
     <title>Zillno</title>
     <%= csrf_meta_tags %>
@@ -37,7 +36,11 @@
            
           </ul>
            <li class="nav navbar-nav navbar-right">
-              <%= link_to "Login", new_login_path, class: "nav-link" %>
+              <% if @current_user %>
+                <%= link_to "Login", new_login_path, class: "nav-link" %>
+              <% else %>
+                <%= link_to @user.user_name, user_path(@user), class: "nav-link"%>
+                <%= link_to "Login", new_login_path, class: "nav-link" %>
             </li>
             <li class="nav navbar-nav navbar-right">
               <%= link_to "Sign Up", new_user_path, class: "nav-link" %>
@@ -56,4 +59,3 @@
   </body>
 
    
-</html>
