--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,24 +17,18 @@
         </button>
           <div class="collapse navbar-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+             <%= link_to "Listings", houses_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://magazine.realtor/daily-news">News</a>
-           </li>
+              <%= link_to "Agents", agents_path, class: "nav-link" %>
+            </li>
             <li class="nav-item">
               <%= link_to "Sell Your House!", new_house_path, class: "nav-link" %>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="/users/new">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-           
+            <li class="nav-item">
+              <a class="nav-link" href="https://magazine.realtor/daily-news">News</a>
+           </li>                     
           </ul>
            <li class="nav navbar-nav navbar-right">
               <%= link_to "Login", new_login_path, class: "nav-link" %>
@@ -46,7 +40,7 @@
       </div>
     </nav>
 
-    
+
     <hr>
     <hr>     
         <%= yield %>
