login and new user page styling

--- a/app/views/homepage/home.html.erb
+++ b/app/views/homepage/home.html.erb
@@ -1,3 +1,5 @@
+<div display: block;>
+    
 <div class="container">
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -24,7 +26,7 @@
     </div>
   </div>
   </div>
-
+</div>
 
 
   <div class="container marketing">
@@ -68,10 +70,10 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">List Your House on Zillno!</h2>
         <h2 class="text-muted">Sell With Our Experienced Agents.</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">List your home in as little as 5 minutes with one of our experienced agents right here on Zillno. Get your listing out to buyers faster than ever</p>
       </div>
       <div class="col-md-5">
-        <%= image_tag("sold_house.png", class: "bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto", size: "500X500")%>
+        <%= image_tag("Place_an_offer.png", class: "bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto", size: "500X500")%>
       </div>
     </div>
 
