--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,28 +1,40 @@
-<body>
-<% if flash[:user_errors] %>
-    <% flash[:user_errors].each do |error| %>
-        <div style="color: red"><%= error %></div>
+
+<hr>
+<div  style="text-align: center">
+    <body>
+        
+        <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eo_circle_blue_white_letter-z.svg/1024px-Eo_circle_blue_white_letter-z.svg.png" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Create Your Account</h1>
+        <%= form_for(@user) do |f| %>
+            <p><%= f.text_field :name, placeholder: "Name"  %></p>
+
+
+            <p><%= f.text_field :user_name, placeholder: "Username"  %></p>
+
+
+            <p><%= f.email_field :email, placeholder: "Email"  %></p>
+
+
+            <p><%= f.password_field :password, placeholder: "Password"  %></p>
+
+
+            <p><%= f.text_field :img_url, placeholder: "Profile Picture URL"  %></p>
+
+            <%= f.submit class: "btn btn-primary" %>
+
+             
+         
         <% end %>
-<% end %>
 
-<%= form_for(@user) do |f| %>
-    <div  style="text-align: center">
-    <%= f.label :name %>
-    <%= f.text_field :name %><br>
-
-    <%= f.label :user_name %>
-    <%= f.text_field :user_name %><br>
-
-    <%= f.label :email %>
-    <%= f.email_field :email %><br>
-
-    <%= f.label :password %>
-    <%= f.password_field :password %><br>
-
-    <%= f.label "Profile Picture URL" %>
-    <%= f.text_field :img_url %><br>
-    
-    <%= f.submit %>
-    </div>
-<% end %>
-</body>
+        <div  style="text-align: center">
+            <div  style="text-align: center">
+                <% if flash[:user_errors] %>
+                    <% flash[:user_errors].each do |error| %>
+                <div style="color: red"><%= error %></div>
+                    <% end %>
+                <% end %>
+            </div>
+        </div>
+        <p class="mt-5 mb-3 text-muted">© 2020-2020</p>
+    </body>
+</div>
