--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,42 +12,67 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
       <a class="navbar-brand" href="/">Zillno</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav w-100">
           <li class="nav-item">
             <%= link_to "Listings", houses_path, class: "nav-link" %>
           </li>
+
           <li class="nav-item">
             <%= link_to "Agents", agents_path, class: "nav-link" %>
           </li>
+
           <li class="nav-item">
-            <%= link_to "Sell Your House!", new_house_path, class: "nav-link" %>
+            <%= link_to "Sell Your Home!", new_house_path, class: "nav-link" %>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="https://magazine.realtor/daily-news">News</a>
-          </li>                     
+          </li>     
+            
+
+         
+          <% if session[:user_id] %>
+          <% @user = User.find(session[:user_id]) %>
+            <li class="nav-item dropdown ml-auto">
+                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <%= "Hello, #{@user.name}" %> </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <%= link_to "Account", user_path(@user), class: "dropdown-item" %>
+                  <%= link_to "Logout", logout_path, method: :delete, class: "dropdown-item" %>
+                </div>
+            </li> 
+               
+        </ul> 
+        <ul class="navbar-nav ml-auto">
+            <% else%>
+              <li class="nav-item active">
+                <%= link_to "Login", new_login_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "Sign Up", new_user_path, class: "nav-link" %>
+              </li> 
+            <% end%>
         </ul>
-          <li class="nav navbar-nav navbar-right">
-            <%= link_to "Login", new_login_path, class: "nav-link" %>
-          </li>
-          <li class="nav navbar-nav navbar-right">
-            <%= link_to "Sign Up", new_user_path, class: "nav-link" %>
-          </li>
+        
+         
+   
+    
+      
+          
       </div>
     </nav>
+
+
 
     <hr>
     <hr>     
         <%= yield %>
 
-    <hr>
-    <footer class="container">
-      <p class="float-right"><a href="#">Back to top</a></p>
-      <p>©Zillno 2020 a GeorgePassarelli Company · <a href="https://33.media.tumblr.com/ab04c028a5244377a0ab96e73915e584/tumblr_nfn3ztLjxk1tq4of6o1_400.gif">Privacy</a> · <a href="https://policies.google.com/privacy?hl=en-US">Terms</a></p>
-    </footer>
+    
+  
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
